Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Ie7ff28b6cf65231bab7757ae9c5c9bf1bee9f475

Former-commit-id: 4e5669b82f7d843ed2bb3d18d55ded2bc39264f9

--- a/res/values-af/strings.xml
+++ b/res/values-af/strings.xml
@@ -2450,7 +2450,7 @@
     <string name="daltonizer_mode_deuteranomaly_summary" msgid="791173297742998942">"Rooi-groen"</string>
     <string name="daltonizer_mode_protanomaly_summary" msgid="482834207025141433">"Rooi-groen"</string>
     <string name="daltonizer_mode_tritanomaly_summary" msgid="2837137091067433059">"Blou-geel"</string>
-    <string name="reduce_bright_colors_preference_title" msgid="2249314004651574997">"Ekstra donker"</string>
+    <string name="reduce_bright_colors_preference_title" msgid="2249314004651574997">"Ekstra flou"</string>
     <string name="reduce_bright_colors_switch_title" msgid="1751678397884065312">"Maak skerm ekstra donker"</string>
     <string name="reduce_bright_colors_preference_summary" product="default" msgid="7878756844769221647">"Maak skerm donkerder as jou foon se minimum helderheid"</string>
     <string name="reduce_bright_colors_preference_summary" product="tablet" msgid="8959794720356934888">"Maak skerm donkerder as jou tablet se minimum helderheid"</string>
