--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -1441,7 +1441,7 @@
     <string name="night_display_text" msgid="4789324042428095383">"تؤدي الإضاءة الليلية إلى تلوين الشاشة باللون الكهرماني الخفيف، ما يسهّل النظر إلى الشاشة في الإضاءة الخافتة ويمكن أن يساعدك على الشعور بالنعاس أيضًا."</string>
     <string name="night_display_auto_mode_title" msgid="5869128421470824381">"الجدول الزمني"</string>
     <string name="night_display_auto_mode_never" msgid="2721729920187175239">"عدم تحديد جدول زمني"</string>
-    <string name="night_display_auto_mode_custom" msgid="3938791496034086916">"التفعيل في وقت مخصّّص"</string>
+    <string name="night_display_auto_mode_custom" msgid="3938791496034086916">"التفعيل في وقت معيّن"</string>
     <string name="night_display_auto_mode_twilight" msgid="4291855156158833997">"التفعيل من غروب الشمس حتى شروقها"</string>
     <string name="night_display_start_time_title" msgid="2611541851596977786">"وقت البدء"</string>
     <string name="night_display_end_time_title" msgid="5243112480391192111">"وقت الانتهاء"</string>
@@ -1470,7 +1470,7 @@
     <string name="dark_ui_auto_mode_title" msgid="9027528859262295099">"الجدول الزمني"</string>
     <string name="dark_ui_auto_mode_never" msgid="3980412582267787662">"مطلقًا"</string>
     <string name="dark_ui_auto_mode_auto" msgid="6658909029498623375">"التفعيل من غروب الشمس حتى شروقها"</string>
-    <string name="dark_ui_auto_mode_custom" msgid="3800138185265182170">"تفعيل الإعداد في وقت مخصّص"</string>
+    <string name="dark_ui_auto_mode_custom" msgid="3800138185265182170">"التفعيل في وقت معيّن"</string>
     <string name="dark_ui_status_title" msgid="3505119141437774329">"الحالة"</string>
     <string name="dark_ui_summary_off_auto_mode_never" msgid="5828281549475697398">"لن يتم مطلقًا تفعيل الوضع تلقائيًا."</string>
     <string name="dark_ui_summary_off_auto_mode_auto" msgid="6766831395970887213">"سيتم التفعيل تلقائيًا عند غروب الشمس."</string>
@@ -1480,7 +1480,7 @@
     <string name="dark_ui_summary_on_auto_mode_custom" msgid="2526935680241734784">"سيتم إيقاف الإعداد تلقائيًا في <xliff:g id="ID_1">%1$s</xliff:g>."</string>
     <string name="dark_ui_activation_on_custom" msgid="1889379402860316125">"تفعيل الميزة حتى <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="dark_ui_activation_off_custom" msgid="2192932161592759607">"إيقاف الميزة حتى <xliff:g id="ID_1">%1$s</xliff:g>"</string>
-    <string name="dark_ui_text" msgid="4392646155331126666">"يستخدم \"التصميم الداكن\" خلفية سوداء لتوفير طاقة البطارية والحفاظ عليها لفترة أطول في بعض الشاشات. لا يتم تفعيل الجداول الزمنية لعمل \"التصميم الداكن\" إلا بعد قفل الشاشة."</string>
+    <string name="dark_ui_text" msgid="4392646155331126666">"يستخدم \"المظهر الداكن\" خلفية سوداء لتوفير طاقة البطارية والحفاظ عليها لفترة أطول في بعض الشاشات. لا يتم تفعيل الجداول الزمنية لعمل \"المظهر الداكن\" إلا بعد قفل الشاشة."</string>
     <string name="screen_timeout" msgid="7709947617767439410">"مهلة غلق الشاشة"</string>
     <string name="screen_timeout_title" msgid="785134393520893049">"إيقاف الشاشة"</string>
     <string name="screen_timeout_summary" msgid="5558778019594643427">"بعد <xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g> من عدم النشاط"</string>
@@ -2741,7 +2741,7 @@
     <string name="manager_battery_usage_optimized_summary" msgid="1332545476428039900">"تحسين الإعدادات بناءً على الاستخدام (مقترحة لمعظم التطبيقات)"</string>
     <string name="manager_battery_usage_restricted_summary" msgid="8324695640704416905">"يتم حظر استخدام البطارية أثناء العمل في الخلفية. وبالتالي، قد لا يعمل التطبيق على النحو المتوقع. وقد تتأخر الإشعارات."</string>
     <string name="manager_battery_usage_footer" msgid="2635906573922553766">"يمكن لتغيير طريقة استخدام التطبيق للبطارية أن يؤثر في أدائها."</string>
-    <string name="manager_battery_usage_footer_limited" msgid="5180776148877306780">"يتطلب هذا التطبيق أن يكون استخدام البطارية <xliff:g id="STATE">%1$s</xliff:g>."</string>
+    <string name="manager_battery_usage_footer_limited" msgid="5180776148877306780">"يتطلب هذا التطبيق اعتماد <xliff:g id="STATE">%1$s</xliff:g>."</string>
     <string name="manager_battery_usage_unrestricted_only" msgid="3646162131339418216">"غير محدّد بقيود"</string>
     <string name="manager_battery_usage_optimized_only" msgid="7121785281913056432">"الاستخدام المحسَّن"</string>
     <string name="manager_battery_usage_link_a11y" msgid="374918091821438564">"مزيد من المعلومات حول خيارات استخدام البطارية"</string>
@@ -3435,7 +3435,7 @@
     <string name="user_credential_title" msgid="4686178602575567298">"تفاصيل بيانات الاعتماد"</string>
     <string name="user_credential_removed" msgid="4087675887725394743">"تمت إزالة بيانات الاعتماد: <xliff:g id="CREDENTIAL_NAME">%s</xliff:g>"</string>
     <string name="user_credential_none_installed" msgid="918620912366836994">"لم يتم تثبيت بيانات اعتماد المستخدم."</string>
-    <string name="spellcheckers_settings_title" msgid="2799021700580591443">"تدقيق إملائي"</string>
+    <string name="spellcheckers_settings_title" msgid="2799021700580591443">"المدقق الإملائي"</string>
     <string name="spellcheckers_settings_for_work_title" msgid="6471603934176062893">"المدقق الإملائي للعمل"</string>
     <string name="current_backup_pw_prompt" msgid="4962276598546381140">"اكتب كلمة المرور الحالية للنسخة الاحتياطية الكاملة هنا"</string>
     <string name="new_backup_pw_prompt" msgid="4884439230209419503">"اكتب كلمة مرور جديدة للنسخ الاحتياطية الكاملة هنا"</string>
@@ -4292,7 +4292,7 @@
     <string name="zen_mode_calls_list" msgid="5044730950895749093">"المكالمات"</string>
     <string name="zen_mode_calls_header" msgid="8379225445095856726">"المكالمات التي يمكنها مقاطعة عمل الميزة"</string>
     <string name="zen_mode_calls_footer" msgid="2008079711083701243">"للتأكّد من أنّ المكالمات المسموح بها تصدر تنبيهًا صوتيًا، تحقَّق من ضبط جهازك على الرنين."</string>
-    <string name="zen_mode_custom_calls_footer" msgid="6521283204577441053">"بالنسبة إلى \"<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>\"، يتمّ حظر المكالمات الواردة. ويمكنك ضبط الإعدادات للسماح لأصدقائك أو أفراد عائلتك أو جهات الاتصال الأخرى بالتواصل معك."</string>
+    <string name="zen_mode_custom_calls_footer" msgid="6521283204577441053">"عند تفعيل الجدول الزمني \"<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>\"، يتمّ حظر المكالمات الواردة. ويمكنك ضبط الإعدادات للسماح لأصدقائك أو أفراد عائلتك أو جهات الاتصال الأخرى بالتواصل معك."</string>
     <string name="zen_mode_starred_contacts_title" msgid="630299631659575589">"جهات الاتصال المميّزة بنجمة"</string>
     <string name="zen_mode_starred_contacts_summary_contacts" msgid="1629467178444895094">"{count,plural,offset:2 =0{ما من جهات اتصال مميّزة بنجمة}=1{{contact_1}}=2{{contact_1} و{contact_2}}=3{{contact_1} و{contact_2} و{contact_3}}few{{contact_1} و{contact_2} و# جهات اتصال أخرى مميّزة بنجمة}many{{contact_1} و{contact_2} و# جهة اتصال أخرى مميّزة بنجمة}other{{contact_1} و{contact_2} و# جهة اتصال أخرى مميّزة بنجمة}}"</string>
     <string name="zen_mode_starred_contacts_empty_name" msgid="2906404745550293688">"(بلا اسم)"</string>
@@ -4617,7 +4617,7 @@
     <string name="usage_access" msgid="5487993885373893282">"الوصول إلى بيانات الاستخدام"</string>
     <string name="permit_usage_access" msgid="179630895262172674">"السماح بالوصول إلى بيانات الاستخدام"</string>
     <string name="app_usage_preference" msgid="7062447555623339120">"الإعدادات المفضّلة لاستخدام التطبيقات"</string>
-    <string name="time_spent_in_app_pref_title" msgid="25327097913383330">"وقت النظر إلى الشاشة"</string>
+    <string name="time_spent_in_app_pref_title" msgid="25327097913383330">"مدّة النظر إلى الشاشة"</string>
     <string name="usage_access_description" msgid="8547716253713890707">"عند السماح بالوصول إلى بيانات الاستخدام، سيتمكّن التطبيق من تتبّع التطبيقات الأخرى التي تستخدمها ومدى تكرار استخدامها وكذلك تتبّع مشغّل شبكة الجوال وإعدادات اللغة بالإضافة إلى تفاصيل أخرى."</string>
     <string name="memory_settings_title" msgid="6582588646363308430">"الذاكرة"</string>
     <string name="memory_details_title" msgid="3048107441540417799">"تفاصيل الذاكرة"</string>
@@ -5070,7 +5070,7 @@
     <string name="dark_theme_slice_title" msgid="4684222119481114062">"تجربة \"المظهر الداكن\""</string>
     <string name="dark_theme_slice_subtitle" msgid="5555724345330434268">"المساعدة في زيادة عمر البطارية"</string>
     <string name="quick_settings_developer_tiles" msgid="7336007844525766623">"فئات مطوّري البرامج في الإعدادات السريعة"</string>
-    <string name="adb_authorization_timeout_title" msgid="6996844506783749754">"‏إيقاف مهلة تفويض أداة adb"</string>
+    <string name="adb_authorization_timeout_title" msgid="6996844506783749754">"‏إيقاف مهلة تفويض أداة Adb"</string>
     <string name="adb_authorization_timeout_summary" msgid="409931540424019778">"‏إيقاف الإبطال التلقائي لتفويضات أداة Adb الممنوحة للأنظمة التي لم تُعد الاتصال خلال الفترة التلقائية (7 أيام) أو الفترة التي يضبطها المستخدم (الحد الأدنى يوم واحد)"</string>
     <string name="winscope_trace_quick_settings_title" msgid="4104768565053226689">"‏تتبّع أنشطة Winscope"</string>
     <string name="sensors_off_quick_settings_title" msgid="8472151847125917167">"إيقاف أجهزة الاستشعار"</string>
@@ -5329,7 +5329,7 @@
     <string name="storage_videos" msgid="6117698226447251033">"الفيديوهات"</string>
     <string name="storage_audio" msgid="5994664984472140386">"الصوت"</string>
     <string name="storage_apps" msgid="3564291603258795216">"التطبيقات"</string>
-    <string name="storage_documents_and_other" msgid="3293689243732236480">"المستندات والمحتوى الآخر"</string>
+    <string name="storage_documents_and_other" msgid="3293689243732236480">"المستندات وغيرها"</string>
     <string name="storage_system" msgid="8472410119822911844">"النظام"</string>
     <string name="storage_trash" msgid="2807138998886084856">"المهملات"</string>
     <string name="storage_trash_dialog_title" msgid="2296169576049935200">"هل تريد إفراغ المهملات؟"</string>
