--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -3355,7 +3355,7 @@
     <string name="application_restrictions" msgid="276179173572729205">"Дозволи апликации и содржина"</string>
     <string name="apps_with_restrictions_header" msgid="5277698582872267931">"Апликации со ограничувања"</string>
     <string name="apps_with_restrictions_settings_button" msgid="2648355133416902221">"Прошири поставки за апликација"</string>
-    <string name="nfc_payment_settings_title" msgid="2043139180030485500">"Плаќања без контакт"</string>
+    <string name="nfc_payment_settings_title" msgid="2043139180030485500">"Бесконтактно плаќање"</string>
     <string name="nfc_payment_how_it_works" msgid="3658253265242662010">"Како функционира"</string>
     <string name="nfc_payment_no_apps" msgid="6840001883471438798">"Плаќајте со телефонот во продавници"</string>
     <string name="nfc_payment_default" msgid="3769788268378614608">"Стандардна апликација за плаќање"</string>
@@ -4773,7 +4773,7 @@
     <string name="dark_theme_slice_subtitle" msgid="5555724345330434268">"Батеријата трае подолго"</string>
     <string name="quick_settings_developer_tiles" msgid="7336007844525766623">"Програмерски плочки за брзи поставки"</string>
     <string name="adb_authorization_timeout_title" msgid="6996844506783749754">"Оневозможи го времето за авторизација преку ADB"</string>
-    <string name="adb_authorization_timeout_summary" msgid="409931540424019778">"Овозможи автоматско отповикување на авторизацијата преку ADB за системите што не се поврзале повторно во стандардниот рок (7 дена) или во рокот конфигуриран од корисникот (најмалку 1 ден)."</string>
+    <string name="adb_authorization_timeout_summary" msgid="409931540424019778">"Оневозможи автоматско отповикување на авторизацијата преку ADB за системите што не се поврзале повторно во стандардниот рок (7 дена) или во рокот конфигуриран од корисникот (најмалку 1 ден)."</string>
     <string name="winscope_trace_quick_settings_title" msgid="4104768565053226689">"Трага од Winscope"</string>
     <string name="sensors_off_quick_settings_title" msgid="8472151847125917167">"Сензорите се исклучени"</string>
     <string name="managed_profile_settings_title" msgid="3400923723423564217">"Поставки за работен профил"</string>
@@ -4862,7 +4862,7 @@
     <string name="ambient_display_tap_screen_title" product="tablet" msgid="6461531447715370632">"Допрете за да го проверите таблетот"</string>
     <string name="ambient_display_tap_screen_title" product="device" msgid="4423803387551153840">"Допрете за да го проверите уредот"</string>
     <string name="ambient_display_tap_screen_summary" msgid="4480489179996521405">"За да ги проверите времето, известувањата и другите информации, допрете го екранот."</string>
-    <string name="emergency_gesture_screen_title" msgid="3280543310204360902">"Итна помош"</string>
+    <string name="emergency_gesture_screen_title" msgid="3280543310204360902">"SOS за итни случаи"</string>
     <string name="emergency_gesture_switchbar_title" msgid="7421353963329899514">"Користи „Итна помош“"</string>
     <string name="emergency_gesture_entrypoint_summary" msgid="4730874229911208834">"Управувано од <xliff:g id="APP_NAME">%1$s</xliff:g>"</string>
     <string name="emergency_gesture_screen_summary" msgid="6640521030845132507">"Брзо притиснете го копчето за вклучување 5 или повеќе пати за да започнат дејствата наведени подолу"</string>
