--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -1591,7 +1591,7 @@
     <string name="storage_menu_manage" msgid="7465522758801346408">"Urus storan"</string>
     <string name="keywords_storage_menu_free" msgid="2275406357317597106">"bersih, storan"</string>
     <string name="storage_free_up_space_title" msgid="281047807372131975">"Kosongkan ruang"</string>
-    <string name="storage_free_up_space_summary" msgid="6650027929735481350">"Pergi ke apl Fail untuk mengurus dan mengosongkan ruang"</string>
+    <string name="storage_free_up_space_summary" msgid="6650027929735481350">"Pergi ke apl Files untuk mengurus dan mengosongkan ruang"</string>
     <string name="storage_title_usb" msgid="1332488715547400452">"Sambungan komputer USB"</string>
     <string name="usb_connection_category" msgid="2288543238378907242">"Sambung sebagai"</string>
     <string name="usb_mtp_title" msgid="9068009584556422314">"Peranti media (MTP)"</string>
@@ -2413,7 +2413,7 @@
     <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"Gunakan <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
     <string name="accessibility_service_primary_open_title" msgid="8655108684769091154">"Buka <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
     <string name="accessibility_daltonizer_primary_switch_title" msgid="32064721588910540">"Gunakan pembetulan warna"</string>
-    <string name="accessibility_caption_primary_switch_title" msgid="8901149325574757370">"Tunjukkan kapsyen"</string>
+    <string name="accessibility_caption_primary_switch_title" msgid="8901149325574757370">"Tunjukkan sari kata"</string>
     <string name="accessibility_caption_primary_switch_summary" msgid="2754071646412717674">"Untuk apl yang disokong sahaja"</string>
     <string name="captioning_caption_appearance_title" msgid="4501313548541670063">"Saiz dan gaya sari kata"</string>
     <string name="captioning_caption_appearance_summary" msgid="7340741178479381312">"Saiz teks <xliff:g id="ACCESSIBILITY_FONT_SIZE">%1$s</xliff:g>"</string>
@@ -2503,7 +2503,7 @@
     <string name="captioning_edge_color" msgid="6035818279902597518">"Warna sisi"</string>
     <string name="captioning_edge_type" msgid="5281259280060811506">"Jenis sisi"</string>
     <string name="captioning_typeface" msgid="285325623518361407">"Keluarga fon"</string>
-    <string name="captioning_preview_text" msgid="4973475065545995704">"Kapsyen akan kelihatan seperti ini"</string>
+    <string name="captioning_preview_text" msgid="4973475065545995704">"Sari kata akan kelihatan seperti ini"</string>
     <string name="captioning_preview_characters" msgid="7854812443613580460">"Aa"</string>
     <string name="locale_default" msgid="8948077172250925164">"Lalai"</string>
     <string name="color_title" msgid="2511586788643787427">"Warna"</string>
