--- a/res/values-pa/strings.xml
+++ b/res/values-pa/strings.xml
@@ -3765,7 +3765,7 @@
     <string name="asst_importance_reset_summary" msgid="684794589254282667">"ਵਰਤੋਂਕਾਰਾਂ ਵੱਲੋਂ ਬਦਲੀਆਂ ਗਈਆਂ ਮਹੱਤਤਾ ਵਾਲੀਆਂ ਸੈਟਿੰਗਾਂ ਨੂੰ ਰੀਸੈੱਟ ਕਰੋ ਅਤੇ ਸੂਚਨਾ ਸਹਾਇਕ ਨੂੰ ਤਰਜੀਹ ਦੇਣ ਦੀ ਇਜਾਜ਼ਤ ਦਿਓ"</string>
     <string name="asst_capabilities_actions_replies_title" msgid="4392470465646394289">"ਸੁਝਾਈਆਂ ਗਈਆਂ ਕਾਰਵਾਈਆਂ ਅਤੇ ਜਵਾਬ"</string>
     <string name="asst_capabilities_actions_replies_summary" msgid="416234323365645871">"ਸਵੈਚਲਿਤ ਤੌਰ \'ਤੇ ਸੁਝਾਈਆਂ ਗਈਆਂ ਕਾਰਵਾਈਆਂ ਅਤੇ ਜਵਾਬਾਂ ਨੂੰ ਦਿਖਾਓ"</string>
-    <string name="notification_history_summary" msgid="5434741516307706892">"ਹਾਲੀਆਂ ਅਤੇ ਸਨੂਜ਼ ਕੀਤੀਆਂ ਸੂਚਨਾਵਾਂ ਦਿਖਾਓ"</string>
+    <string name="notification_history_summary" msgid="5434741516307706892">"ਹਾਲੀਆ ਅਤੇ ਸਨੂਜ਼ ਕੀਤੀਆਂ ਸੂਚਨਾਵਾਂ ਦਿਖਾਓ"</string>
     <string name="notification_history" msgid="8663811361243456201">"ਸੂਚਨਾ ਇਤਿਹਾਸ"</string>
     <string name="notification_history_toggle" msgid="9093762294928569030">"ਸੂਚਨਾ ਇਤਿਹਾਸ ਵਰਤੋ"</string>
     <string name="notification_history_off_title_extended" msgid="853807652537281601">"ਸੂਚਨਾ ਇਤਿਹਾਸ ਬੰਦ ਹੈ"</string>
