--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -2500,7 +2500,7 @@
     <string name="daltonizer_mode_deuteranomaly_summary" msgid="791173297742998942">"Красный и зеленый"</string>
     <string name="daltonizer_mode_protanomaly_summary" msgid="482834207025141433">"Красный и зеленый"</string>
     <string name="daltonizer_mode_tritanomaly_summary" msgid="2837137091067433059">"Синий и желтый"</string>
-    <string name="reduce_bright_colors_preference_title" msgid="2249314004651574997">"Дополнительное уменьшение яркости"</string>
+    <string name="reduce_bright_colors_preference_title" msgid="2249314004651574997">"Доп. уменьшение яркости"</string>
     <string name="reduce_bright_colors_switch_title" msgid="1751678397884065312">"Дополнительно уменьшить яркость экрана"</string>
     <string name="reduce_bright_colors_preference_summary" product="default" msgid="7878756844769221647">"Сделать экран телефона темнее, чем при минимальной яркости"</string>
     <string name="reduce_bright_colors_preference_summary" product="tablet" msgid="8959794720356934888">"Сделать экран планшета темнее, чем при минимальной яркости"</string>
@@ -5017,7 +5017,7 @@
     <string name="ambient_display_tap_screen_title" product="device" msgid="4423803387551153840">"Нажмите, чтобы проверить устройство"</string>
     <string name="ambient_display_tap_screen_summary" msgid="4480489179996521405">"Чтобы увидеть время, уведомления и другую информацию, коснитесь экрана"</string>
     <string name="emergency_gesture_screen_title" msgid="3280543310204360902">"Экстренные вызовы"</string>
-    <string name="emergency_gesture_switchbar_title" msgid="7421353963329899514">"Использовать функцию \"Экстренный вызов\""</string>
+    <string name="emergency_gesture_switchbar_title" msgid="7421353963329899514">"Использовать функцию \"Экстренные вызовы\""</string>
     <string name="emergency_gesture_entrypoint_summary" msgid="4730874229911208834">"Под управлением приложения \"<xliff:g id="APP_NAME">%1$s</xliff:g>\""</string>
     <string name="emergency_gesture_screen_summary" msgid="6640521030845132507">"Быстро нажмите кнопку питания не менее пяти раз для выполнения перечисленных ниже действий"</string>
     <string name="emergency_gesture_sound_setting_title" msgid="7153948164862156536">"Звуковой сигнал с обратным отсчетом"</string>
