--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -2393,7 +2393,7 @@
     <string name="accessibility_display_inversion_preference_title" msgid="5476133104746207952">"Ugeuzaji rangi"</string>
     <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"Tumia ugeuzaji rangi"</string>
     <string name="accessibility_display_inversion_preference_subtitle" msgid="6955835010409034745">"Ugeuzaji rangi hubadilisha skrini zenye mwangaza kuwa nyeusi.&lt;br/&gt;&lt;br/&gt; Kumbuka: &lt;ol&gt; &lt;li&gt; Ugeuzaji rangi pia hubadilisha skrini nyeusi kuwa za mwangaza.&lt;/li&gt; &lt;li&gt; Rangi zitabadilika kwenye maudhui na picha.&lt;/li&gt; &lt;li&gt; Mandhari meusi yanaweza kutumika kuonyesha mandharinyuma meusi. Mandhari meusi hufanya kazi kwenye programu zinazotumika. Ugeuzaji rangi hufanya kazi kwenye programu zote.&lt;/li&gt; &lt;/ol&gt;"</string>
-    <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"Kubofya kiotomatiki (muda wa kuchukua hatua)"</string>
+    <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"Kubofya kiotomatiki (muda kabla ya kubofya kiotomatiki)"</string>
     <string name="accessibility_autoclick_description" msgid="6827042379062255307">"Kubofya kiotomatiki hufanya kazi na kipanya kilichounganishwa. Unaweza kuweka mipangilio ili kiteuzi cha kipanya kibofye kiotomatiki kiteuzi kinaposimama kwa muda fulani."</string>
     <string name="accessibility_autoclick_default_title" msgid="752429113115293087">"Kimezimwa"</string>
     <string name="accessibility_autoclick_short_title" msgid="7938302504358912984">"Muda mfupi"</string>
@@ -2610,9 +2610,9 @@
     <string name="background_activity_warning_dialog_title" msgid="3449566823290744823">"Ungependa kudhibiti shughuli za chini chini?"</string>
     <string name="background_activity_warning_dialog_text" msgid="8202776985767701095">"Ikiwa utadhibiti shughuli za chini chini za programu, huenda isifanye kazi vizuri"</string>
     <string name="background_activity_disabled_dialog_text" msgid="4053170297325882494">"Kwa kuwa programu hii haiboreshi matumizi ya betri, huwezi kuizuia.\n\nIli uizuie, washa kuboresha matumizi ya betri."</string>
-    <string name="manager_battery_usage_unrestricted_title" msgid="2426486290463258032">"Isiyodhibitiwa"</string>
+    <string name="manager_battery_usage_unrestricted_title" msgid="2426486290463258032">"Yasiyodhibitiwa"</string>
     <string name="manager_battery_usage_optimized_title" msgid="8080765739761921817">"Yaliyoboreshwa"</string>
-    <string name="manager_battery_usage_restricted_title" msgid="7702863764130323118">"Imedhibitiwa"</string>
+    <string name="manager_battery_usage_restricted_title" msgid="7702863764130323118">"Yanayodhibitiwa"</string>
     <string name="manager_battery_usage_unrestricted_summary" msgid="6819279865465667692">"Ruhusu matumizi ya betri chinichini bila vidhibiti. Huenda ikatumia chaji nyingi ya betri."</string>
     <string name="manager_battery_usage_optimized_summary" msgid="1332545476428039900">"Boresha kulingana na jinsi unavyotumia. Inapendekezwa kwa ajili ya programu nyingi."</string>
     <string name="manager_battery_usage_restricted_summary" msgid="8324695640704416905">"Dhibiti matumizi ya betri inapotumika chinichini. Huenda programu isifanye kazi ipasavyo. Huenda arifa zikachelewa."</string>
@@ -3751,7 +3751,7 @@
     <string name="recent_notifications_see_all_title" msgid="3087299996651692987">"Angalia zilizotumika katika siku 7 zilizopita"</string>
     <string name="general_notification_header" msgid="3669031068980713359">"Dhibiti"</string>
     <string name="app_notification_field" msgid="3858667320444612716">"Mipangilio ya programu"</string>
-    <string name="app_notification_field_summary" msgid="5981393613897713471">"Dhibiti arifa katika programu mahususi"</string>
+    <string name="app_notification_field_summary" msgid="5981393613897713471">"Dhibiti arifa kutoka programu mahususi"</string>
     <string name="advanced_section_header" msgid="6478709678084326738">"Jumla"</string>
     <string name="profile_section_header" msgid="4970209372372610799">"Arifa za kazini"</string>
     <string name="smart_notifications_title" msgid="8995288376897952015">"Arifa zinazojirekebisha"</string>
@@ -3955,7 +3955,7 @@
     <string name="picture_in_picture_app_detail_summary" msgid="2503211101305358849">"Ruhusu programu hii iunde kidirisha cha picha ndani ya picha wakati programu imefunguka au baada ya kuifunga (kwa mfano, ili uendelee kutazama video). Kidirisha hiki kitaonekana juu ya programu zingine unazotumia."</string>
     <string name="interact_across_profiles_title" msgid="7285906999927669971">"Programu za kazi na za binafsi pamoja"</string>
     <string name="interact_across_profiles_summary_allowed" msgid="1365881452153799092">"Imeunganishwa"</string>
-    <string name="interact_across_profiles_summary_not_allowed" msgid="5802674212788171790">"Haijaunganishwa"</string>
+    <string name="interact_across_profiles_summary_not_allowed" msgid="5802674212788171790">"Hazijaunganishwa"</string>
     <string name="interact_across_profiles_empty_text" msgid="419061031064397168">"Hakuna programu zilizounganishwa"</string>
     <string name="interact_across_profiles_keywords" msgid="5996472773111665049">"sehemu ya wasifu programu zilizounganishwa programu za kazini na binafsi"</string>
     <string name="interact_across_profiles_app_detail_title" msgid="7776184211173575648">"Programu za kazi na za binafsi pamoja"</string>
@@ -4080,7 +4080,7 @@
     <string name="zen_mode_calls_list" msgid="5044730950895749093">"simu"</string>
     <string name="zen_mode_calls_header" msgid="8379225445095856726">"Simu zinazoweza kukatiza"</string>
     <string name="zen_mode_calls_footer" msgid="2008079711083701243">"Ili uhakikishe kuwa simu zinazoruhusiwa zinatoa sauti, hakikisha umeweka mipangilio ya kifaa kulia"</string>
-    <string name="zen_mode_custom_calls_footer" msgid="6521283204577441053">"Kwa ‘<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>’ simu zinazoingia zimezuiwa. Unaweza kubadilisha mipangilio ili uwaruhusu marafiki, familia na watu wengine wawasiliane nawe."</string>
+    <string name="zen_mode_custom_calls_footer" msgid="6521283204577441053">"Kwa hali ya ‘<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>’, simu zinazoingia zimezuiwa. Unaweza kubadilisha mipangilio ili uwaruhusu marafiki, familia na watu wengine wawasiliane nawe."</string>
     <string name="zen_mode_starred_contacts_title" msgid="630299631659575589">"Anwani zenye nyota"</string>
     <string name="zen_mode_starred_contacts_summary_contacts" msgid="1629467178444895094">"{count,plural,offset:2 =0{Hamna}=1{{contact_1}}=2{{contact_1} na {contact_2}}=3{{contact_1}, {contact_2} na {contact_3}}other{{contact_1}, {contact_2} na zingine #}}"</string>
     <string name="zen_mode_starred_contacts_empty_name" msgid="2906404745550293688">"(Hakuna jina)"</string>
