--- a/res/values-th/strings.xml
+++ b/res/values-th/strings.xml
@@ -563,7 +563,7 @@
     <string name="fingerprint_delete_title" msgid="1469865327307917858">"นำ \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" ออก"</string>
     <string name="fingerprint_delete_message" msgid="1454995433333496541">"คุณต้องการลบลายนิ้วมือนี้ไหม"</string>
     <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"การดำเนินการนี้จะลบรูปภาพและโมเดลลายนิ้วมือที่เชื่อมโยงกับ \"<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>\" ที่จัดเก็บในอุปกรณ์ของคุณ"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"คุณจะไม่สามารถใช้ลายนิ้วมือเพื่อปลดล็อกโทรศัพท์หรือยืนยันว่าเป็นคุณในแอป"</string>
+    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"คุณจะไม่สามารถใช้ลายนิ้วมือของคุณปลดล็อกโทรศัพท์หรือยืนยันว่าเป็นคุณในแอป"</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"คุณจะไม่สามารถใช้ลายนิ้วมือเพื่อปลดล็อกโปรไฟล์งาน ให้สิทธิ์การซื้อ หรือลงชื่อเข้าใช้แอปงาน"</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"ใช่ นำออกเลย"</string>
     <string name="security_settings_biometrics_title" msgid="9156091890323967944">"การปลดล็อกด้วยใบหน้าและลายนิ้วมือ"</string>
@@ -2294,11 +2294,11 @@
     <string name="accessibility_magnification_area_settings_message" msgid="8498648925928109462">"ขยายเป็นเต็มหน้าจอ ขยายพื้นที่ที่เจาะจง หรือจะสลับไปมาระหว่างตัวเลือกทั้ง 2 อย่างก็ได้"</string>
     <string name="accessibility_magnification_area_settings_full_screen_summary" msgid="2728962784113713010">"เต็มหน้าจอ"</string>
     <string name="accessibility_magnification_area_settings_window_screen_summary" msgid="9191632962955877019">"หน้าจอบางส่วน"</string>
-    <string name="accessibility_magnification_area_settings_all_summary" msgid="8107511976748799455">"สลับไปมาระหว่างแบบเต็มหน้าจอกับบางส่วน"</string>
+    <string name="accessibility_magnification_area_settings_all_summary" msgid="8107511976748799455">"สลับไปมาระหว่างหน้าจอแบบเต็มกับหน้าจอบางส่วน"</string>
     <string name="accessibility_magnification_mode_dialog_title" msgid="9151027667059878578">"เลือกวิธีขยาย"</string>
     <string name="accessibility_magnification_mode_dialog_option_full_screen" msgid="4892487869954032029">"ขยายเป็นเต็มหน้าจอ"</string>
     <string name="accessibility_magnification_mode_dialog_option_window" msgid="4492443201099153362">"ขยายบางส่วนของหน้าจอ"</string>
-    <string name="accessibility_magnification_mode_dialog_option_switch" msgid="561043521011229424">"สลับไปมาระหว่างแบบเต็มหน้าจอกับบางส่วน"</string>
+    <string name="accessibility_magnification_mode_dialog_option_switch" msgid="561043521011229424">"สลับไปมาระหว่างหน้าจอแบบเต็มกับหน้าจอบางส่วน"</string>
     <string name="accessibility_magnification_area_settings_mode_switch_summary" msgid="2885238806099080966">"แตะปุ่มเปลี่ยนเพื่อสลับไปมาระหว่างทั้ง 2 ตัวเลือก"</string>
     <string name="accessibility_magnification_switch_shortcut_title" msgid="3671432048806533079">"เปลี่ยนไปใช้ปุ่มการช่วยเหลือพิเศษใช่ไหม"</string>
     <string name="accessibility_magnification_switch_shortcut_message" msgid="7718653917415163833">"การใช้การแตะ 3 ครั้งเพื่อขยายบางส่วนของหน้าจอจะทำให้การพิมพ์และการดำเนินการอื่นๆ ล่าช้า\n\nปุ่มการช่วยเหลือพิเศษจะลอยอยู่บนหน้าจอเหนือแอปอื่นๆ แตะปุ่มดังกล่าวเพื่อขยาย"</string>
@@ -3783,14 +3783,14 @@
     <string name="bubbles_feature_education" msgid="4088275802688887634">"การแจ้งเตือนบางรายการและเนื้อหาอื่นอาจแสดงเป็นลูกโป่งในหน้าจอได้ แตะลูกโป่งเพื่อเปิด ลากลูกโป่งลงไปที่ด้านล่างของหน้าจอเพื่อปิด"</string>
     <string name="bubbles_app_toggle_title" msgid="5319021259954576150">"บับเบิล"</string>
     <string name="bubbles_conversation_app_link" msgid="5468779786387915337">"การตั้งค่าบับเบิลทั้งหมด"</string>
-    <string name="bubbles_conversation_toggle_title" msgid="5225039214083311316">"แสดงการสนทนานี้เป็นบับเบิ้ล"</string>
+    <string name="bubbles_conversation_toggle_title" msgid="5225039214083311316">"แสดงการสนทนานี้เป็นบับเบิล"</string>
     <string name="bubbles_conversation_toggle_summary" msgid="720229032254323578">"แสดงไอคอนแบบลอยที่ด้านบนสุดของแอป"</string>
     <string name="bubbles_app_toggle_summary" msgid="1574515698567947948">"อนุญาตให้ \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" แสดงการแจ้งเตือนบางรายการเป็นบับเบิล"</string>
     <string name="bubbles_feature_disabled_dialog_title" msgid="1794193899792284007">"เปิดบับเบิลของอุปกรณ์ไหม"</string>
     <string name="bubbles_feature_disabled_dialog_text" msgid="5275666953364031055">"การเปิดบับเบิลของแอปนี้จะเปิดบับเบิลของอุปกรณ์ด้วย\n\nการดำเนินการนี้จะส่งผลต่อแอปหรือการสนทนาอื่นๆ ที่ได้รับอนุญาตให้แสดงเป็นบับเบิล"</string>
     <string name="bubbles_feature_disabled_button_approve" msgid="2042628067101419871">"เปิด"</string>
     <string name="bubbles_feature_disabled_button_cancel" msgid="8963409459448350600">"ยกเลิก"</string>
-    <string name="notifications_bubble_setting_on_summary" msgid="4641572377430901196">"เปิดอยู่/การสนทนาจะปรากฏเป็นไอคอนแบบลอยได้"</string>
+    <string name="notifications_bubble_setting_on_summary" msgid="4641572377430901196">"เปิดอยู่ / การสนทนาจะปรากฏเป็นไอคอนแบบลอยได้"</string>
     <string name="notifications_bubble_setting_title" msgid="8287649393774855268">"อนุญาตให้แอปแสดงบับเบิล"</string>
     <string name="notifications_bubble_setting_description" msgid="7336770088735025981">"การสนทนาบางรายการจะปรากฏเป็นไอคอนแบบลอยที่ด้านบนของแอปอื่นๆ"</string>
     <string name="bubble_app_setting_all" msgid="312524752846978277">"การสนทนาทั้งหมดแสดงเป็นบับเบิลได้"</string>
@@ -4080,7 +4080,7 @@
     <string name="zen_mode_calls_list" msgid="5044730950895749093">"การโทร"</string>
     <string name="zen_mode_calls_header" msgid="8379225445095856726">"การโทรเข้าที่รบกวนคุณได้"</string>
     <string name="zen_mode_calls_footer" msgid="2008079711083701243">"ตรวจสอบว่าคุณตั้งค่าอุปกรณ์ให้ส่งเสียง เพื่อให้แน่ใจว่าอุปกรณ์จะส่งเสียงเมื่อมีสายเรียกเข้าที่อนุญาต"</string>
-    <string name="zen_mode_custom_calls_footer" msgid="6521283204577441053">"บล็อกสายเรียกเข้าสำหรับ \"<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>\" เอาไว้ คุณปรับเปลี่ยนการตั้งค่าเพื่ออนุญาตให้เพื่อน ครอบครัว หรือรายชื่อติดต่อคนอื่นๆ ติดต่อคุณได้"</string>
+    <string name="zen_mode_custom_calls_footer" msgid="6521283204577441053">"บล็อกสายเรียกเข้าเอาไว้สำหรับ \"<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>\" คุณปรับเปลี่ยนการตั้งค่าเพื่ออนุญาตให้เพื่อน ครอบครัว หรือรายชื่อติดต่อคนอื่นๆ ติดต่อคุณได้"</string>
     <string name="zen_mode_starred_contacts_title" msgid="630299631659575589">"รายชื่อติดต่อที่ติดดาว"</string>
     <string name="zen_mode_starred_contacts_summary_contacts" msgid="1629467178444895094">"{count,plural,offset:2 =0{ไม่มี}=1{{contact_1}}=2{{contact_1} และ {contact_2}}=3{{contact_1}, {contact_2} และ {contact_3}}other{{contact_1}, {contact_2} และคนอื่นๆ อีก # ราย}}"</string>
     <string name="zen_mode_starred_contacts_empty_name" msgid="2906404745550293688">"(ไม่มีชื่อ)"</string>
