--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -3355,7 +3355,7 @@
     <string name="application_restrictions" msgid="276179173572729205">"Rakenduste ja sisu lubamine"</string>
     <string name="apps_with_restrictions_header" msgid="5277698582872267931">"Piirangutega rakendused"</string>
     <string name="apps_with_restrictions_settings_button" msgid="2648355133416902221">"Laienda rakenduste seadeid"</string>
-    <string name="nfc_payment_settings_title" msgid="2043139180030485500">"Kontaktivabad maksed"</string>
+    <string name="nfc_payment_settings_title" msgid="2043139180030485500">"Viipemaksed"</string>
     <string name="nfc_payment_how_it_works" msgid="3658253265242662010">"Kuidas see toimib?"</string>
     <string name="nfc_payment_no_apps" msgid="6840001883471438798">"Makske poes oma telefoniga"</string>
     <string name="nfc_payment_default" msgid="3769788268378614608">"Vaikemakseviis"</string>
