--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -560,7 +560,7 @@
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"حداکثر تعداد اثرانگشت را اضافه کرده‌اید"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"نمی‌توانید اثرانگشت‌های بیشتری اضافه کنید"</string>
     <string name="fingerprint_last_delete_title" msgid="4081475675646514726">"همه اثر انگشت‌ها پاک شوند؟"</string>
-    <string name="fingerprint_delete_title" msgid="1469865327307917858">"پاک کردن «<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>»"</string>
+    <string name="fingerprint_delete_title" msgid="1469865327307917858">"حذف کردن «<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>»"</string>
     <string name="fingerprint_delete_message" msgid="1454995433333496541">"می‌خواهید این اثر انگشت را پاک کنید؟"</string>
     <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"با این کار مدل و تصاویر اثر انگشت مرتبط با «<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>» که در دستگاهتان ذخیره شده‌اند حذف می‌شوند"</string>
     <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"نمی‌توانید از اثر انگشت برای باز کردن قفل تلفن یا تأیید هویتتان در برنامه‌ها استفاده کنید."</string>
@@ -1133,9 +1133,9 @@
     </plurals>
     <string name="wifi_advanced_titlebar" msgid="1234150304285575798">"‏Wi-Fi پیشرفته"</string>
     <string name="wifi_advanced_ssid_title" msgid="1561437650193980185">"SSID"</string>
-    <string name="wifi_advanced_device_mac_address_title" msgid="6155800851233164411">"«نشانی واد» دستگاه"</string>
-    <string name="wifi_advanced_randomized_mac_address_title" msgid="3930671320234553088">"«نشانی واد» تصادفی"</string>
-    <string name="wifi_advanced_randomized_mac_address_disconnected_title" msgid="2755843130417523727">"«نشانی واد» تصادفی (آخرین استفاده)"</string>
+    <string name="wifi_advanced_device_mac_address_title" msgid="6155800851233164411">"«مک آدرس» دستگاه"</string>
+    <string name="wifi_advanced_randomized_mac_address_title" msgid="3930671320234553088">"«مک آدرس» تصادفی"</string>
+    <string name="wifi_advanced_randomized_mac_address_disconnected_title" msgid="2755843130417523727">"«مک آدرس» تصادفی (آخرین استفاده)"</string>
     <string name="wifi_advanced_ip_address_title" msgid="4265355419782184514">"‏نشانی IP"</string>
     <string name="wifi_details_title" msgid="222735438574597493">"جزئیات شبکه"</string>
     <string name="wifi_details_subnet_mask" msgid="1619151769276260512">"پوشش زیرشبکه"</string>
@@ -2289,7 +2289,7 @@
     <string name="talkback_summary" msgid="5820927220378864281">"صفحه‌خوان در وهله اول برای افراد نابینا و کم‌بینا در نظر گرفته شده است"</string>
     <string name="select_to_speak_summary" msgid="1995285446766920925">"روی موارد موجود در صفحه‌تان ضربه بزنید تا بلند خوانده شوند"</string>
     <string name="accessibility_captioning_title" msgid="4561871958958925225">"اولویت‌های زیرنویس ناشنوایان"</string>
-    <string name="accessibility_screen_magnification_title" msgid="1211169976144629087">"بزرگ‌نمایی"</string>
+    <string name="accessibility_screen_magnification_title" msgid="1211169976144629087">"درشت‌‌نمایی"</string>
     <string name="accessibility_magnification_mode_title" msgid="8446475127807168063">"نوع درشت‌نمایی"</string>
     <string name="accessibility_magnification_area_settings_message" msgid="8498648925928109462">"بخش مشخصی صفحه یا کل آن را درشت‌نمایی کنید، یا بین دو گزینه جابه‌جا شوید"</string>
     <string name="accessibility_magnification_area_settings_full_screen_summary" msgid="2728962784113713010">"تمام‌صفحه"</string>
@@ -2304,17 +2304,17 @@
     <string name="accessibility_magnification_switch_shortcut_message" msgid="7718653917415163833">"استفاده از سه‌ضربه برای درشت‌نمایی بخشی از صفحه باعث می‌شود تایپ کردن و دیگر کنش‌ها با تأخیر انجام شود.\n\nدکمه دسترس‌پذیری در صفحه بالای برنامه‌های دیگر شناور است. برای درشت‌نمایی، روی آن ضربه بزنید."</string>
     <string name="accessibility_magnification_switch_shortcut_positive_button" msgid="2446942190957296957">"رفتن به دکمه دسترس‌پذیری"</string>
     <string name="accessibility_magnification_switch_shortcut_negative_button" msgid="7115794462123071594">"استفاده از سه‌ضربه"</string>
-    <string name="accessibility_magnification_service_settings_title" msgid="3531350704632316017">"تنظیمات بزرگ‌نمایی"</string>
+    <string name="accessibility_magnification_service_settings_title" msgid="3531350704632316017">"تنظیمات درشت‌‌نمایی"</string>
     <string name="accessibility_screen_magnification_gestures_title" msgid="3121714118381882167">"درشت‌نمایی با سه ضربه"</string>
     <string name="accessibility_screen_magnification_navbar_title" msgid="480853328665484528">"درشت‌نمایی بااستفاده از میان‌بر"</string>
     <string name="accessibility_screen_magnification_state_navbar_gesture" msgid="8067042663897802231">"درشت‌نمایی بااستفاده از میان‌بر و سه ضربه"</string>
     <string name="accessibility_introduction_title" msgid="8834950581512452348">"درباره <xliff:g id="SERVICE">%1$s</xliff:g>"</string>
     <string name="accessibility_screen_option" msgid="8465307075278878145">"گزینه‌ها"</string>
-    <string name="accessibility_preference_magnification_summary" msgid="2875518904115896888">"بزرگ کردن روی صفحه"</string>
+    <string name="accessibility_preference_magnification_summary" msgid="2875518904115896888">"زوم‌پیش روی صفحه"</string>
     <string name="accessibility_screen_magnification_short_summary" msgid="2207048420669939150">"برای بزرگ‌نمایی، ۳ بار ضربه بزنید"</string>
     <string name="accessibility_screen_magnification_navbar_short_summary" msgid="4885018322430052037">"برای بزرگ‌نمایی، روی دکمه‌ای ضربه بزنید"</string>
-    <string name="accessibility_screen_magnification_summary" msgid="2527664482392097865">"‏به‌سرعت صفحه‌نمایش را بزرگ کنید تا محتوا بزرگ‌تر شود.&lt;br/&gt;&lt;br/&gt; &lt;b&gt;برای بزرگ کردن:&lt;/b&gt;&lt;br/&gt; {0,number,integer}. برای فعال کردن درشت‌نمایی، از میان‌بر استفاده کنید&lt;br/&gt; {1,number,integer}. روی صفحه‌نمایش ضربه بزنید&lt;br/&gt; {2,number,integer}. برای حرکت کردن در صفحه، ۲ انگشت را بکشید&lt;br/&gt; {3,number,integer}. برای تنظیم بزرگ‌نمایی، ۲ انگشت را به‌هم دور یا نزدیک کنید&lt;br/&gt; {4,number,integer}. برای توقف درشت‌نمایی از میان‌براستفاده کنید&lt;br/&gt;&lt;br/&gt; &lt;b&gt;برای بزرگ کردن موقت:&lt;/b&gt;&lt;br/&gt; {0,number,integer}. برای فعال کردن درشت‌نمایی، از میان‌بر استفاده کنید&lt;br/&gt; {1,number,integer}. جایی از صفحه‌نمایش را لمس کنید و نگه دارید&lt;br/&gt; {2,number,integer}. برای حرکت کردن در صفحه، انگشت را بکشید&lt;br/&gt; {3,number,integer}. برای متوقف کردن درشت‌نمایی، انگشتتان را بردارید"</string>
-    <string name="accessibility_screen_magnification_navbar_summary" msgid="807985499898802296">"با روشن کردن درشت‌نمایی، می‌توانید روی صفحه بزرگ‌نمایی کنید.\n\n"<b>"برای بزرگ‌نمایی"</b>"، درشت‌نمایی را روشن کنید و روی جایی از صفحه ضربه بزنید.\n"<ul><li>"برای پیمایش، دو یا چند انگشتتان را روی صفحه بکشید "</li>\n<li>"برای تنظیم بزرگ‌نمایی، دو یا چند انگشتتان را به‌هم نزدیک کنید"</li></ul>\n\n<b>"برای بزرگ‌نمایی موقت"</b>"، درشت‌نمایی را روشن کنید، سپس جایی از صفحه را لمس کنید و نگه‌دارید.\n"<ul><li>"برای حرکت در صفحه، انگشتتان را روی صفحه بکشید"</li>\n<li>"برای کوچک کردن، انگشتتان را بردارید"</li></ul>\n\n"نمی‌توانید صفحه‌کلید یا نوار پیمایش را کوچک کنید."</string>
+    <string name="accessibility_screen_magnification_summary" msgid="2527664482392097865">"‏به‌سرعت صفحه‌نمایش را زوم‌پیش کنید تا محتوا بزرگ‌تر شود.&lt;br/&gt;&lt;br/&gt; &lt;b&gt;برای زوم کردن:&lt;/b&gt;&lt;br/&gt; {0,number,integer}. برای فعال کردن درشت‌نمایی، از میان‌بر استفاده کنید&lt;br/&gt; {1,number,integer}. روی صفحه‌نمایش ضربه بزنید&lt;br/&gt; {2,number,integer}. برای حرکت کردن در صفحه، ۲ انگشت را بکشید&lt;br/&gt; {3,number,integer}. برای تنظیم کردن زوم، ۲ انگشت را به‌هم نزدیک یا ازهم دور کنید&lt;br/&gt; {4,number,integer}. برای توقف درشت‌نمایی از میان‌براستفاده کنید&lt;br/&gt;&lt;br/&gt; &lt;b&gt;برای زوم‌پیش موقت:&lt;/b&gt;&lt;br/&gt; {0,number,integer}. برای فعال کردن درشت‌نمایی، از میان‌بر استفاده کنید&lt;br/&gt; {1,number,integer}. جایی از صفحه‌نمایش را لمس کنید و نگه دارید&lt;br/&gt; {2,number,integer}. برای حرکت کردن در صفحه، انگشت را بکشید&lt;br/&gt; {3,number,integer}. برای متوقف کردن درشت‌نمایی، انگشتتان را بردارید"</string>
+    <string name="accessibility_screen_magnification_navbar_summary" msgid="807985499898802296">"با روشن کردن درشت‌نمایی، می‌توانید روی صفحه زوم‌پیش کنید.\n\n"<b>"برای زوم کردن"</b>"، درشت‌نمایی را روشن کنید و روی جایی از صفحه ضربه بزنید.\n"<ul><li>"برای پیمایش، دو یا چند انگشتتان را روی صفحه بکشید "</li>\n<li>"برای تنظیم کردن زوم، دو یا چند انگشتتان را به‌هم نزدیک کنید"</li></ul>\n\n<b>"برای زوم موقت"</b>"، درشت‌نمایی را روشن کنید، سپس جایی از صفحه را لمس کنید و نگه‌دارید.\n"<ul><li>"برای حرکت در صفحه، انگشتتان را روی صفحه بکشید"</li>\n<li>"برای زوم‌پس کردن، انگشتتان را بردارید"</li></ul>\n\n"نمی‌توانید صفحه‌کلید یا نوار پیمایش را کوچک کنید."</string>
     <string name="accessibility_tutorial_pager" msgid="8461939455728454061">"صفحه <xliff:g id="CURRENT_PAGE">%1$d</xliff:g> از <xliff:g id="NUM_PAGES">%2$d</xliff:g>"</string>
     <string name="accessibility_tutorial_dialog_title_button" msgid="4681164949716215131">"استفاده از دکمه دسترس‌پذیری برای باز کردن"</string>
     <string name="accessibility_tutorial_dialog_title_volume" msgid="494810949830845234">"نگه‌داشتن کلیدهای میزان صدا برای باز کردن"</string>
@@ -2350,7 +2350,7 @@
     <string name="accessibility_shortcut_edit_dialog_summary_triple_tap" msgid="2102327956423320536">"‏سریع روی صفحه‌نمایش {0,number,integer} بار ضربه بزنید. ممکن است این میان‌بر سرعت دستگاه را کاهش دهد"</string>
     <string name="accessibility_shortcut_edit_dialog_title_advance" msgid="4567868630655591506">"پیشرفته"</string>
     <string name="accessibility_screen_magnification_navbar_configuration_warning" msgid="266736851606791552">"دکمه دسترس‌پذیری روی <xliff:g id="SERVICE">%1$s</xliff:g> تنظیم شده است. برای استفاده از درشت‌نمایی، دکمه دسترس‌پذیری را لمس کنید و نگه‌دارید، سپس درشت‌نمایی را انتخاب کنید."</string>
-    <string name="accessibility_screen_magnification_gesture_navigation_warning" msgid="991017769735632046">"اشاره دسترس‌پذیری روی <xliff:g id="SERVICE">%1$s</xliff:g> تنظیم شده است. برای استفاده از بزرگ‌نمایی، با دو انگشت از پایین صفحه به بالا بکشید و نگه‌دارید. سپس بزرگ‌نمایی را انتخاب کنید."</string>
+    <string name="accessibility_screen_magnification_gesture_navigation_warning" msgid="991017769735632046">"اشاره دسترس‌پذیری روی <xliff:g id="SERVICE">%1$s</xliff:g> تنظیم شده است. برای استفاده از درشت‌‌نمایی، با دو انگشت از پایین صفحه به‌بالا بکشید و نگه‌ ارید. سپس درشت‌‌نمایی را انتخاب کنید."</string>
     <string name="accessibility_global_gesture_preference_title" msgid="3713636732641882959">"میان‌بر کلید بلندی صدا"</string>
     <string name="accessibility_shortcut_service_title" msgid="6842883700702723355">"سرویس میان‌بر"</string>
     <string name="accessibility_shortcut_settings" msgid="836783442658447995">"تنظیمات میان‌بر"</string>
@@ -2371,8 +2371,8 @@
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"شفاف"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"غیرشفاف"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"نوشتار با کنتراست بالا"</string>
-    <string name="accessibility_toggle_screen_magnification_auto_update_preference_title" msgid="4987009529235165664">"به‌روزرسانی خودکار بزرگ‌نمایی صفحه"</string>
-    <string name="accessibility_toggle_screen_magnification_auto_update_preference_summary" msgid="9034532513972547720">"به‌روزرسانی بزرگ‌نمایی صفحه در انتقال‌های برنامه"</string>
+    <string name="accessibility_toggle_screen_magnification_auto_update_preference_title" msgid="4987009529235165664">"به‌روزرسانی خودکار درشت‌‌نمایی صفحه"</string>
+    <string name="accessibility_toggle_screen_magnification_auto_update_preference_summary" msgid="9034532513972547720">"به‌روزرسانی درشت‌‌نمایی صفحه در انتقال‌های برنامه"</string>
     <string name="accessibility_power_button_ends_call_prerefence_title" msgid="8187306131979612144">"قطع تماس با دکمه روشن/خاموش"</string>
     <string name="accessibility_toggle_large_pointer_icon_title" msgid="5508351959249876801">"اشاره‌گر موشواره بزرگ"</string>
     <string name="accessibility_disable_animations" msgid="2993529829457179058">"برداشتن پویانمایی‌ها"</string>
@@ -2544,7 +2544,7 @@
     <string name="settings_button" msgid="2195468788019730377">"تنظیمات"</string>
     <string name="keywords_reduce_bright_colors" msgid="1683190961013139183">"حساسیت به نور، نورهراسی، زمینه تیره، میگرن، سردرد، حالت خواندن، حالت شب، کاهش روشنایی، درجه سفیدی"</string>
     <string name="keywords_accessibility" msgid="4263443239404659143">"سهولت استفاده، سهولت دسترسی، دستیار، یاری‌رسان"</string>
-    <string name="keywords_magnification" msgid="3908145308269840862">"ذره‌بین پنجره، بزرگ‌نمایی، درشت‌نمایی، کم‌بینا، بزرگ کردن، بزرگ‌تر کردن"</string>
+    <string name="keywords_magnification" msgid="3908145308269840862">"ذره‌بین پنجره، زوم، درشت‌نمایی، کم‌بینا، بزرگ کردن، بزرگ‌تر کردن"</string>
     <string name="keywords_talkback" msgid="2816435437095102527"></string>
     <string name="keywords_live_caption" msgid="1667203998080567556">"‏زیرنویس، زیرنویس ناشنوایان، CC، ترانویسی هم‌زمان، کم‌شنوا، ازدست دادن شنوایی، CART، گفتار به نوشتار، زیرنویس"</string>
     <string name="keywords_live_transcribe" msgid="3226990195174890997"></string>
@@ -4080,7 +4080,7 @@
     <string name="zen_mode_calls_list" msgid="5044730950895749093">"تماس‌ها"</string>
     <string name="zen_mode_calls_header" msgid="8379225445095856726">"تماس‌هایی که می‌توانند وقفه ایجاد کنند"</string>
     <string name="zen_mode_calls_footer" msgid="2008079711083701243">"برای اطمینان از اینکه تماس‌های مجاز صدا داشته باشند، بررسی کنید دستگاه روی زنگ زدن تنظیم شده باشد"</string>
-    <string name="zen_mode_custom_calls_footer" msgid="6521283204577441053">"تماس‌های ورودی برای «<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>» مسدود می‌شود. برای اینکه به دوستان و خانواده و سایر مخاطبین امکان دسترسی به خودتان بدهید، می‌توانید تنظیمات را تغییر دهید."</string>
+    <string name="zen_mode_custom_calls_footer" msgid="6521283204577441053">"برای «<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>» تماس‌های ورودی مسدود می‌شود. می‌توانید تنظیمات را تغییر دهید تا به دوستان و خانواده و سایر مخاطبین امکان دسترسی به خودتان را بدهید."</string>
     <string name="zen_mode_starred_contacts_title" msgid="630299631659575589">"مخاطبین ستاره‌دار"</string>
     <string name="zen_mode_starred_contacts_summary_contacts" msgid="1629467178444895094">"{count,plural,offset:2 =0{هیچ‌کدام}=1{{contact_1}}=2{{contact_1} و {contact_2}}=3{{contact_1}، {contact_2} و {contact_3}}one{{contact_1}، {contact_2}، و # نفر دیگر}other{{contact_1}، {contact_2}، و # نفر دیگر}}"</string>
     <string name="zen_mode_starred_contacts_empty_name" msgid="2906404745550293688">"(بدون نام)"</string>
@@ -4118,7 +4118,7 @@
     <string name="zen_mode_reminders_list" msgid="3133513621980999858">"یادآوری‌ها"</string>
     <string name="zen_mode_reminders_list_first" msgid="1130470396012190814">"یادآوری‌ها"</string>
     <string name="zen_mode_events" msgid="7425795679353531794">"رویدادهای تقویم"</string>
-    <string name="zen_mode_events_summary" msgid="3241903481309766428">"از رویدادهای تقویم آتی"</string>
+    <string name="zen_mode_events_summary" msgid="3241903481309766428">"از رویدادهای پیش‌روی تقویم"</string>
     <string name="zen_mode_events_list" msgid="7191316245742097229">"رویدادها"</string>
     <string name="zen_mode_events_list_first" msgid="7425369082835214361">"رویدادها"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"مجاز کردن برنامه‌ها برای لغو"</string>
@@ -4290,7 +4290,7 @@
     </plurals>
     <plurals name="runtime_permissions_additional_count" formatted="false" msgid="5888624648943937645">
       <item quantity="one"><xliff:g id="COUNT_1">%d</xliff:g> اجازه تکمیلی</item>
-      <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> اجازه‌های تکمیلی</item>
+      <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> اجازه‌های جانبی</item>
     </plurals>
     <string name="runtime_permissions_summary_no_permissions_granted" msgid="7456745929035665029">"اجازه‌ای داده نشده"</string>
     <string name="runtime_permissions_summary_no_permissions_requested" msgid="7174876170116073356">"اجازه‌ای درخواست نشده"</string>
@@ -4395,7 +4395,7 @@
     <string name="no_battery_summary_24hr" msgid="6280079526797873842">"طی ۲۴ ساعت گذشته از باتری استفاده نشده است"</string>
     <string name="app_notification_preferences" msgid="2004680717999108725">"تنظیمات برنامه"</string>
     <string name="system_ui_settings" msgid="936169564323330967">"نمایش تنظیم‌گر واسط کاربری سیستم"</string>
-    <string name="additional_permissions" msgid="4656871347558988462">"اجازه‌های تکمیلی"</string>
+    <string name="additional_permissions" msgid="4656871347558988462">"اجازه‌های جانبی"</string>
     <string name="additional_permissions_more" msgid="8188145515437525307">"<xliff:g id="COUNT">%1$d</xliff:g> مورد دیگر"</string>
     <string name="share_remote_bugreport_dialog_title" msgid="1575283098565582433">"گزارش اشکال به اشتراک گذاشته شود؟"</string>
     <string name="share_remote_bugreport_dialog_message_finished" msgid="4869053468609007680">"سرپرست فناوری اطلاعات شما برای کمک به عیب‌یابی این دستگاه، گزارش اشکال درخواست کرده است. ممکن است برنامه‌ها و داده‌ها به اشتراک گذاشته شوند."</string>
