--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -3313,7 +3313,7 @@
     <string name="user_summary_not_set_up" msgid="4602868481732886115">"સેટ કરેલ નથી"</string>
     <string name="user_summary_restricted_not_set_up" msgid="1658946988920104613">"સેટ કરેલ નથી - પ્રતિબંધિત પ્રોફાઇલ"</string>
     <string name="user_summary_managed_profile_not_set_up" msgid="5739207307082458746">"સેટ કરેલ નથી - કાર્યાલયની પ્રોફાઇલ"</string>
-    <string name="user_admin" msgid="4024553191395768119">"એડમિન"</string>
+    <string name="user_admin" msgid="4024553191395768119">"ઍડમિન"</string>
     <string name="user_you" msgid="3070562015202859996">"તમે (<xliff:g id="NAME">%s</xliff:g>)"</string>
     <string name="user_add_max_count" msgid="5739771048517070983">"તમે <xliff:g id="USER_COUNT">%1$d</xliff:g> જેટલા વપરાશકર્તાઓ ઉમેરી શકો છો"</string>
     <string name="user_cannot_manage_message" product="tablet" msgid="3405022988077682357">"માત્ર ટૅબ્લેટના માલિક વપરાશકર્તાને મેનેજ કરી શકે છે."</string>
