--- a/res/values-ky/strings.xml
+++ b/res/values-ky/strings.xml
@@ -53,7 +53,7 @@
     <string name="font_size_make_smaller_desc" msgid="4978038055549590140">"Кичирээк кылуу"</string>
     <string name="font_size_make_larger_desc" msgid="5583046033381722247">"Чоңураак кылуу"</string>
     <string name="auto_rotate_settings_primary_switch_title" msgid="3151963020165952847">"Автоматтык бурулууну иштетүү"</string>
-    <string name="smart_rotate_text_headline" msgid="436277795183609578">"Жүздү аныктоо функциясы автоматтык түрдө бурулуунун тактыгын жакшыртуу үчүн маңдайкы камераны колдонот. Сүрөттөр Google\'га эч качан жөнөтүлбөйт же анда сакталбайт."</string>
+    <string name="smart_rotate_text_headline" msgid="436277795183609578">"Жүздөрдү аныктоо функциясы маңдайкы камера аркылуу автоматтык түрдө бурулууну кыйла тагыраак кылат. Сүрөттөр Google\'га эч качан жөнөтүлбөйт же анда сакталбайт."</string>
     <string name="font_size_preview_text_headline" msgid="1173103737980511652">"Үлгү текст"</string>
     <string name="font_size_preview_text_title" msgid="6363561029914452382">"Оз өлкөсүнүн ажайып сыйкырчысы"</string>
     <string name="font_size_preview_text_subtitle" msgid="5806349524325544614">"11-бөлүм: Оз өлкөсүнүн ажайып зумурут шаары"</string>
@@ -852,7 +852,7 @@
     <string name="bluetooth_menu_advanced" msgid="7633682234855216066">"Өркүндөтүлгөн"</string>
     <string name="bluetooth_advanced_titlebar" msgid="5369701494951467257">"Өркүндөтүлгөн Bluetooth"</string>
     <string name="bluetooth_empty_list_bluetooth_off" msgid="316627049372961941">"Bluetooth күйгүзүлгөндө түзмөгүңүз жакын арадагы башка Bluetooth түзмөктөрү менен байланыша алат."</string>
-    <string name="bluetooth_scanning_on_info_message" msgid="6667723887545056976">"Bluetooth күйгүзүлгөндө, түзмөгүңүз жакын жердеги башка Bluetooth түзмөктөрү менен байланышат.\n\nТүзмөктүн колдонулушун жакшыртуу максатында, колдонмолор менен кызматтар жакын жердеги түзмөктөрдү каалаган убакта, ошондой эле Bluetooth өчүрүлгөн учурда да издей алышат. Бул, мисалы, жайгашкан жердин негизинде иштеген функцияларды жана кызматтарды жакшыртуу үчүн колдонулушу мүмкүн. Бул функцияны "<annotation id="link">"Bluetooth издөө жөндөөлөрүнөн"</annotation>" өзгөртсөңүз болот."</string>
+    <string name="bluetooth_scanning_on_info_message" msgid="6667723887545056976">"Башка түзмөктөргө туташуу үчүн Bluetooth\'ду күйгүзүңүз.\n\nЖерлерди тагыраак аныктап, түзмөктүн иштешин жакшыртуу үчүн Bluetooth өчүп турганда да колдонмолор менен кызматтар жакын жердеги түзмөктөрдү издей беришет. Издебесин десеңиз, "<annotation id="link">"Bluetooth түзмөктөрүн издөө"</annotation>" дегенди өчүрүп коюңуз."</string>
     <string name="ble_scan_notify_text" msgid="1358879010396045164">"Кандайдыр бир жерди тагыраак аныктоо үчүн системанын колдонмолору жана кызматтар жакын арадагы Bluetooth түзмөктөрүн издей берет. Бул функцияны <xliff:g id="LINK_BEGIN_0">LINK_BEGIN</xliff:g>издөө жөндөөлөрүнөн<xliff:g id="LINK_END_1">LINK_END</xliff:g> өзгөртсөңүз болот."</string>
     <string name="bluetooth_connect_failed" msgid="7892663424429584925">"Туташпай калды. Кайталап көрүңүз."</string>
     <string name="device_details_title" msgid="1155622417516195481">"Түзмөктүн чоо-жайы"</string>
@@ -2074,9 +2074,9 @@
     <string name="show_background_processes" msgid="5682856012453562151">"Кештелген процсстрд көрст"</string>
     <string name="default_emergency_app" msgid="1929974800666613803">"Өзгөчө кырдаал колдонмосу"</string>
     <string name="reset_app_preferences" msgid="8861758340732716573">"Колдонмонун жөндөөлөрүн кайра коюу"</string>
-    <string name="reset_app_preferences_title" msgid="8935136792316050759">"Колдонмону кайра баштан жөндөйсүзбү?"</string>
+    <string name="reset_app_preferences_title" msgid="8935136792316050759">"Колдонмону кайра коесузбу?"</string>
     <string name="reset_app_preferences_desc" msgid="6509978724602405805">"Ушуну менен, төмөнкүлөр кайра жөндөлөт:\n\n"<li>"Өчүрүлгөн колдонмолор"</li>\n<li>"Өчүрүлгөн колдонмолордун билдирмелери"</li>\n<li>"Демейки колдонмолордун аракеттери"</li>\n<li>"Колдонмолордун Фондук режиминдеги чектөөлөрү"</li>\n<li>"Бардык уруксаттарды чектөөлөр"</li>\n\n"Колдонмонун бардык маалыматтары сакталып калат."</string>
-    <string name="reset_app_preferences_button" msgid="2591318711372850058">"Баштапкы абалга келтирүү"</string>
+    <string name="reset_app_preferences_button" msgid="2591318711372850058">"Кайра коюу"</string>
     <string name="manage_space_text" msgid="9013414693633572277">"Орун бошотуу"</string>
     <string name="filter" msgid="9039576690686251462">"Чыпка"</string>
     <string name="filter_dlg_title" msgid="3086282431958601338">"Электөө опцияларын тандаңыз"</string>
@@ -2410,7 +2410,7 @@
     <string name="accessibility_notification_vibration_title" msgid="6205679908785776478">"Билдирменин дирилдөөсү"</string>
     <string name="accessibility_ring_vibration_title" msgid="4689811297654320885">"Шыңгырдын дирилдөөсү"</string>
     <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"Басып жооп берүү"</string>
-    <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> колдонмосун колдонуу"</string>
+    <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> колдонмосун иштетүү"</string>
     <string name="accessibility_service_primary_open_title" msgid="8655108684769091154">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> колдонмосун ачуу"</string>
     <string name="accessibility_daltonizer_primary_switch_title" msgid="32064721588910540">"Түстөрдү тууралоону колдонуу"</string>
     <string name="accessibility_caption_primary_switch_title" msgid="8901149325574757370">"Коштомо жазууларды көрсөтүү"</string>
@@ -2613,14 +2613,14 @@
     <string name="manager_battery_usage_unrestricted_title" msgid="2426486290463258032">"Чектелбейт"</string>
     <string name="manager_battery_usage_optimized_title" msgid="8080765739761921817">"Оптималдаштырылган"</string>
     <string name="manager_battery_usage_restricted_title" msgid="7702863764130323118">"Чектелген"</string>
-    <string name="manager_battery_usage_unrestricted_summary" msgid="6819279865465667692">"Колдонмо фондук режимде иштеп жатканда батареянын керектелиши чектелбейт. Батарея тез отуруп калышы мүмкүн."</string>
+    <string name="manager_battery_usage_unrestricted_summary" msgid="6819279865465667692">"Колдонмо фондук режимде иштеп жатканда батарея үнөмдөлбөйт. Батарея тез отуруп калышы мүмкүн."</string>
     <string name="manager_battery_usage_optimized_summary" msgid="1332545476428039900">"Батареянын кубаты анын колдонулушуна жараша оптималдаштырылат. Көптөгөн колдонмолорго сунушталат."</string>
     <string name="manager_battery_usage_restricted_summary" msgid="8324695640704416905">"Фондук режимде батареянын керектелиши чектелет. Колдонмо талаптагыдай иштебей, билдирмелер кечигип көрүнүшү мүмкүн."</string>
     <string name="manager_battery_usage_footer" msgid="2635906573922553766">"Батареяны керектөө ыкмасын өзгөртсөңүз, колдонмонун майнаптуулугуна таасири тийиши мүмкүн."</string>
     <string name="manager_battery_usage_footer_limited" msgid="5180776148877306780">"Бул колдонмо үчүн <xliff:g id="STATE">%1$s</xliff:g> деген вариант тандалышы керек."</string>
     <string name="manager_battery_usage_unrestricted_only" msgid="3646162131339418216">"чектелбейт"</string>
     <string name="manager_battery_usage_optimized_only" msgid="7121785281913056432">"оптималдаштырылган"</string>
-    <string name="manager_battery_usage_link_a11y" msgid="374918091821438564">"Батареянын колдонулушунун параметрлери жөнүндө кеңири маалымат алыңыз"</string>
+    <string name="manager_battery_usage_link_a11y" msgid="374918091821438564">"Батареянын керектелишин тескөө тууралуу кененирээк маалымат"</string>
     <string name="device_screen_usage" msgid="1011630249648289909">"Толук кубатталгандан бери экран канча убакыт колдонулду"</string>
     <string name="power_usage_list_summary" msgid="3237540201918492925">"Толук кубатталгандан бери батареянын керектелиши"</string>
     <string name="screen_usage_summary" msgid="1393184943010909471">"Толук кубатталгандан бери экрандын күйүп турган убактысы"</string>
@@ -3353,7 +3353,7 @@
     <string name="application_restrictions" msgid="276179173572729205">"Колдонмолорго жана мазмунга уруксат"</string>
     <string name="apps_with_restrictions_header" msgid="5277698582872267931">"Чектелген колдонмолор"</string>
     <string name="apps_with_restrictions_settings_button" msgid="2648355133416902221">"Колдонмонун тууралоолорун ачуу"</string>
-    <string name="nfc_payment_settings_title" msgid="2043139180030485500">"Тийбей төлөө"</string>
+    <string name="nfc_payment_settings_title" msgid="2043139180030485500">"Тийгизип төлөө"</string>
     <string name="nfc_payment_how_it_works" msgid="3658253265242662010">"Бул кандайча иштейт"</string>
     <string name="nfc_payment_no_apps" msgid="6840001883471438798">"Дүкөндөн сатып алган нерселериңиздин акысын телефонуңуз аркылуу төлөңүз"</string>
     <string name="nfc_payment_default" msgid="3769788268378614608">"Демейки төлөө ыкмасы"</string>
@@ -3362,15 +3362,15 @@
     <string name="nfc_payment_use_default" msgid="788899906312142803">"Демейки колдонмону колдонуу"</string>
     <string name="nfc_payment_favor_default" msgid="4508491832174644772">"Ар дайым"</string>
     <string name="nfc_payment_favor_open" msgid="8554643344050373346">"Башка төлөм колдонмосу ачылып турбаса"</string>
-    <string name="nfc_payment_pay_with" msgid="3001320460566523453">"Тийбей төлөө терминалында төмөнкү менен төлөңүз:"</string>
+    <string name="nfc_payment_pay_with" msgid="3001320460566523453">"Тийгизип төлөө терминалында ушуну колдонуңуз:"</string>
     <string name="nfc_how_it_works_title" msgid="1363791241625771084">"Терминалдан төлөө"</string>
     <string name="nfc_how_it_works_content" msgid="1141382684788210772">"Төлөм колдонмосун жөндөп туруп, телефондун арткы бетин тийбей төлөө белгиси түшүрүлгөн терминалга жакындатыңыз."</string>
     <string name="nfc_how_it_works_got_it" msgid="4717868843368296630">"Түшүндүм"</string>
     <string name="nfc_more_title" msgid="1041094244767216498">"Дагы…"</string>
     <string name="nfc_payment_set_default_label" msgid="7395939287766230293">"Демейки төлөм колдонмосун коюу"</string>
     <string name="nfc_payment_update_default_label" msgid="8201975914337221246">"Демейки төлөм колдонмосун жаңыртуу"</string>
-    <string name="nfc_payment_set_default" msgid="4101484767872365195">"Тийбей төлөө терминалында <xliff:g id="APP">%1$s</xliff:g> менен төлөңүз"</string>
-    <string name="nfc_payment_set_default_instead_of" msgid="565237441045013280">"Тийбей төлөө терминалында <xliff:g id="APP_0">%1$s</xliff:g> менен төлөңүз.\n\nАл <xliff:g id="APP_1">%2$s</xliff:g> колдонмосунун ордуна демейки шартта колдонулат."</string>
+    <string name="nfc_payment_set_default" msgid="4101484767872365195">"Тийгизип төлөө терминалында <xliff:g id="APP">%1$s</xliff:g> менен төлөңүз"</string>
+    <string name="nfc_payment_set_default_instead_of" msgid="565237441045013280">"Тийгизип төлөө терминалында <xliff:g id="APP_0">%1$s</xliff:g> менен төлөңүз.\n\nАл <xliff:g id="APP_1">%2$s</xliff:g> колдонмосунун ордуна демейки шартта колдонулат."</string>
     <string name="nfc_payment_btn_text_set_deault" msgid="1821065137209590196">"Демейки кылып жөндөө"</string>
     <string name="nfc_payment_btn_text_update" msgid="5159700960497443832">"Жаңыртуу"</string>
     <string name="restriction_settings_title" msgid="4293731103465972557">"Чектөөлөр"</string>
@@ -4080,7 +4080,7 @@
     <string name="zen_mode_calls_list" msgid="5044730950895749093">"чалуулар"</string>
     <string name="zen_mode_calls_header" msgid="8379225445095856726">"\"Тынчымды алба\" режими таасир этпеген чалуулар"</string>
     <string name="zen_mode_calls_footer" msgid="2008079711083701243">"Маанилүү чалууларды өткөрүп жибербеш үчүн түзмөгүңүздүн үнүн чыгарып коюңуз."</string>
-    <string name="zen_mode_custom_calls_footer" msgid="6521283204577441053">"Кирүүчү чалуулар \"<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>\" эрежеси менен бөгөттөлгөн. Достордун, үй-бүлө мүчөлөрүнүн же башка тааныштарыңыздын чалууларын кабыл алуу үчүн жөндөөлөрдү тууралап алыңыз."</string>
+    <string name="zen_mode_custom_calls_footer" msgid="6521283204577441053">"Кирүүчү чалуулар \"<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>\" менен бөгөттөлгөн. Достордун, үй-бүлө мүчөлөрүнүн же башка тааныштарыңыздын чалууларын кабыл алуу үчүн жөндөөлөрдү тууралап алыңыз."</string>
     <string name="zen_mode_starred_contacts_title" msgid="630299631659575589">"Белгиленген байланыштар"</string>
     <string name="zen_mode_starred_contacts_summary_contacts" msgid="1629467178444895094">"{count,plural,offset:2 =0{Жок}=1{{contact_1}}=2{{contact_1} жана {contact_2}}=3{{contact_1}, {contact_2} жана {contact_3}}other{{contact_1}, {contact_2} жана дагы #}}"</string>
     <string name="zen_mode_starred_contacts_empty_name" msgid="2906404745550293688">"(Аты жок)"</string>
@@ -4089,7 +4089,7 @@
     <string name="zen_mode_messages_title" msgid="1777598523485334405">"Билдирүүлөр"</string>
     <string name="zen_mode_messages_header" msgid="253721635061451577">"\"Тынчымды алба\" режими таасир этпеген билдирүүлөр"</string>
     <string name="zen_mode_messages_footer" msgid="6002468050854126331">"Маанилүү чалууларды өткөрүп жибербеш үчүн түзмөгүңүздүн үнүн чыгарып коюңуз"</string>
-    <string name="zen_mode_custom_messages_footer" msgid="7545180036949550830">"\"<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>\" эрежеси иштетилгенде, билдирүүлөр алынбайт. Достордун, үй-бүлө мүчөлөрүнүн же башка тааныштарыңыздын билдирүүлөрүн алуу үчүн жөндөөлөрдү тууралап алыңыз."</string>
+    <string name="zen_mode_custom_messages_footer" msgid="7545180036949550830">"\"<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>\" эрежеси иштетилгенде, билдирүүлөр алынбайт. Достордун, үй-бүлө мүчөлөрүнүн же башка тааныштарыңыздын чалууларына жооп бергиңиз келсе, параметрлерди өзгөртүңүз."</string>
     <string name="zen_mode_all_messages_summary" msgid="3756267858343104554">"\"Тынчымды алба\" режими айрым билдирүүлөр үчүн иштебейт"</string>
     <string name="zen_mode_all_calls_summary" msgid="7337907849083824698">"\"Тынчымды алба\" режими айрым чалуулар үчүн иштебейт"</string>
     <string name="zen_mode_contacts_count" msgid="6568631261119795799">"{count,plural, =0{Жок}=1{1 байланыш}other{# байланыш}}"</string>
@@ -4759,7 +4759,7 @@
     <string name="bluetooth_disabled" msgid="835838280837359514">"Өчүк"</string>
     <string name="bluetooth_connected_summary" msgid="8043167194934315712">"<xliff:g id="ID_1">%1$s</xliff:g> менен туташты"</string>
     <string name="bluetooth_connected_multiple_devices_summary" msgid="2294954614327771844">"Бир нече түзмөккө туташты"</string>
-    <string name="demo_mode" msgid="6566167465451386728">"Тутум интерфейсинин демо режими"</string>
+    <string name="demo_mode" msgid="6566167465451386728">"Системанын интерфейсинин демо режими"</string>
     <string name="dark_ui_mode" msgid="898146394425795281">"Караңгы тема"</string>
     <string name="dark_ui_mode_disabled_summary_dark_theme_on" msgid="4554134480159161533">"Батареяны үнөмдөөчү режимде убактылуу өчүрүлдү"</string>
     <string name="ambient_camera_summary_battery_saver_on" msgid="1787784892047029560">"Батареяны үнөмдөөчү режимде убактылуу өчүрүлдү"</string>
