--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -4991,7 +4991,7 @@
     <string name="storage_audio" msgid="5994664984472140386">"ऑडिओ"</string>
     <string name="storage_apps" msgid="3564291603258795216">"ॲप्स"</string>
     <string name="storage_documents_and_other" msgid="3293689243732236480">"दस्तऐवज आणि इतर"</string>
-    <string name="storage_system" msgid="8472410119822911844">"सिस्टम"</string>
+    <string name="storage_system" msgid="8472410119822911844">"सिस्टीम"</string>
     <string name="storage_trash" msgid="2807138998886084856">"ट्रॅश"</string>
     <string name="storage_trash_dialog_title" msgid="2296169576049935200">"ट्रॅश रिकामा करायचा?"</string>
     <string name="storage_trash_dialog_ask_message" msgid="8982602137242358798">"ट्रॅशमध्ये <xliff:g id="TOTAL">%1$s</xliff:g> फाइल आहेत. सर्व आयटम कायमचे हटवले जातील आणि तुम्हाला ते रिस्टोअर करता येणार नाहीत."</string>
