--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -570,7 +570,7 @@
     <string name="fingerprint_last_delete_title" msgid="4081475675646514726">"Usunąć wszystkie odciski palców?"</string>
     <string name="fingerprint_delete_title" msgid="1469865327307917858">"Usuń „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>”"</string>
     <string name="fingerprint_delete_message" msgid="1454995433333496541">"Czy chcesz usunąć ten odcisk palca?"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Ta czynność usuwa zapisane na urządzeniu obrazy i modele odcisku palca powiązane z: „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>”"</string>
+    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Ta czynność usuwa zapisane na urządzeniu obrazy i modele odcisku palca powiązane z „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>”"</string>
     <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Nie będzie można używać odcisku palca do odblokowywania telefonu i potwierdzania tożsamości w aplikacjach."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Nie będzie można używać odcisku palca do odblokowywania profilu służbowego, zatwierdzania zakupów czy logowania się w aplikacjach służbowych."</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"Tak, usuń"</string>
@@ -2441,7 +2441,7 @@
     <string name="accessibility_display_inversion_preference_title" msgid="5476133104746207952">"Odwrócenie kolorów"</string>
     <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"Odwracaj kolory"</string>
     <string name="accessibility_display_inversion_preference_subtitle" msgid="6955835010409034745">"Odwrócenie kolorów zmienia jasne ekrany w ciemne.&lt;br/&gt;&lt;br/&gt; Uwaga: &lt;ol&gt; &lt;li&gt; Odwrócenie kolorów zmienia także ciemne ekrany w jasne.&lt;/li&gt; &lt;li&gt; Zmienią się kolory w multimediach i na obrazach.&lt;/li&gt; &lt;li&gt; Ciemne tło można też wyświetlać w ciemnym motywie. Ciemny motyw działa w obsługiwanych aplikacjach. Odwrócenie kolorów działa we wszystkich aplikacjach.&lt;/li&gt; &lt;/ol&gt;"</string>
-    <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"Automatyczne kliknięcie (czas oczekiwania)"</string>
+    <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"Automatyczne kliknięcie (czas kontaktu)"</string>
     <string name="accessibility_autoclick_description" msgid="6827042379062255307">"Automatyczne kliknięcie działa po podłączeniu myszy. Możesz ustawić jego wyzwalanie po zatrzymaniu przesuwającego się kursora na określony czas."</string>
     <string name="accessibility_autoclick_default_title" msgid="752429113115293087">"Wyłączone"</string>
     <string name="accessibility_autoclick_short_title" msgid="7938302504358912984">"Krótko"</string>
@@ -2675,7 +2675,7 @@
     <string name="manager_battery_usage_unrestricted_title" msgid="2426486290463258032">"Bez ograniczeń"</string>
     <string name="manager_battery_usage_optimized_title" msgid="8080765739761921817">"Z optymalizacją"</string>
     <string name="manager_battery_usage_restricted_title" msgid="7702863764130323118">"Z ograniczeniami"</string>
-    <string name="manager_battery_usage_unrestricted_summary" msgid="6819279865465667692">"Zezwalaj na wykorzystanie baterii w tle bez ograniczeń. Może to powodować większe wykorzystanie baterii."</string>
+    <string name="manager_battery_usage_unrestricted_summary" msgid="6819279865465667692">"Zezwalaj na wykorzystanie baterii w tle bez ograniczeń. Może to powodować większe zużycie baterii."</string>
     <string name="manager_battery_usage_optimized_summary" msgid="1332545476428039900">"Optymalizuj na podstawie wykorzystania. Zalecane w przypadku większości aplikacji."</string>
     <string name="manager_battery_usage_restricted_summary" msgid="8324695640704416905">"Ograniczaj wykorzystanie baterii podczas działania w tle. Aplikacja może nie działać zgodnie z oczekiwaniami. Powiadomienia mogą być opóźnione."</string>
     <string name="manager_battery_usage_footer" msgid="2635906573922553766">"Zmiana sposobu wykorzystania baterii przez aplikację może obniżyć wydajność."</string>
@@ -3767,7 +3767,7 @@
     <string name="zen_mode_block_effect_light" msgid="1997222991427784993">"Nie włączaj migania diody"</string>
     <string name="zen_mode_block_effect_peek" msgid="2525844009475266022">"Nie wyświetlaj powiadomień na ekranie"</string>
     <string name="zen_mode_block_effect_status" msgid="5765965061064691918">"Ukrywaj ikony na pasku stanu u góry ekranu"</string>
-    <string name="zen_mode_block_effect_badge" msgid="332151258515152429">"Ukrywaj plakietki z powiadomieniem na ikonach aplikacji"</string>
+    <string name="zen_mode_block_effect_badge" msgid="332151258515152429">"Ukrywaj kropki powiadomień na ikonach aplikacji"</string>
     <string name="zen_mode_block_effect_ambient" msgid="1247740599476031543">"Nie wybudzaj w przypadku powiadomień"</string>
     <string name="zen_mode_block_effect_list" msgid="7549367848660137118">"Ukrywaj w obszarze powiadomień"</string>
     <string name="zen_mode_block_effect_summary_none" msgid="6688519142395714659">"Nigdy"</string>
@@ -3867,7 +3867,7 @@
     <string name="snooze_options_title" msgid="2109795569568344617">"Zezwalaj na odkładanie powiadomień"</string>
     <string name="hide_silent_icons_title" msgid="5951392023601167577">"Ukryj ikony z subtelnych powiadomień"</string>
     <string name="hide_silent_icons_summary" msgid="623763437631637232">"Ikony z subtelnych powiadomień nie są pokazywane na pasku stanu"</string>
-    <string name="notification_badging_title" msgid="5469616894819568917">"Plakietka z powiadomieniem na ikonie aplikacji"</string>
+    <string name="notification_badging_title" msgid="5469616894819568917">"Kropka powiadomienia na ikonie aplikacji"</string>
     <string name="notification_people_strip_title" msgid="1185857822541001139">"Pokaż pasek ostatnich rozmów"</string>
     <string name="notification_bubbles_title" msgid="5681506665322329301">"Dymki"</string>
     <string name="bubbles_feature_education" msgid="4088275802688887634">"Niektóre powiadomienia i inne treści mogą pojawiać się jako dymki na ekranie. Aby otworzyć dymek, kliknij go. Aby zamknąć, przeciągnij go w dół ekranu."</string>
@@ -4115,8 +4115,8 @@
     <string name="app_notification_block_summary" msgid="1804611676339341551">"Nigdy nie pokazuj tych powiadomień"</string>
     <string name="notification_content_block_title" msgid="6689085826061361351">"Pokazuj powiadomienia"</string>
     <string name="notification_content_block_summary" msgid="329171999992248925">"Nigdy nie pokazuj powiadomień w obszarze powiadomień ani na urządzeniach peryferyjnych"</string>
-    <string name="notification_badge_title" msgid="6854537463548411313">"Zezwalaj na plakietkę z powiadomieniem"</string>
-    <string name="notification_channel_badge_title" msgid="6505542437385640049">"Pokazuj plakietkę z powiadomieniem"</string>
+    <string name="notification_badge_title" msgid="6854537463548411313">"Zezwalaj na kropkę powiadomienia"</string>
+    <string name="notification_channel_badge_title" msgid="6505542437385640049">"Pokazuj kropkę powiadomienia"</string>
     <string name="app_notification_override_dnd_title" msgid="3769539356442226691">"Ignoruj Nie przeszkadzać"</string>
     <string name="app_notification_override_dnd_summary" msgid="4894641191397562920">"Zezwól na działanie tych powiadomień, gdy tryb Nie przeszkadzać jest włączony"</string>
     <string name="app_notification_visibility_override_title" msgid="7778628150022065920">"Ekran blokady"</string>
@@ -5159,7 +5159,7 @@
     <string name="storage_videos" msgid="6117698226447251033">"Filmy"</string>
     <string name="storage_audio" msgid="5994664984472140386">"Dźwięk"</string>
     <string name="storage_apps" msgid="3564291603258795216">"Aplikacje"</string>
-    <string name="storage_documents_and_other" msgid="3293689243732236480">"Dokumenty i inne dane"</string>
+    <string name="storage_documents_and_other" msgid="3293689243732236480">"Dokumenty i inne pliki"</string>
     <string name="storage_system" msgid="8472410119822911844">"System"</string>
     <string name="storage_trash" msgid="2807138998886084856">"Kosz"</string>
     <string name="storage_trash_dialog_title" msgid="2296169576049935200">"Opróżnić kosz?"</string>
